# QGitHubReleaseAPI

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  qgithubreleaseapi.pc.in  qgithubreleaseapi.prf  qgithubreleaseapi.prf.in
src/: emoji.cpp  emoji.h  entryhelper.h  filedownloader.cpp  filedownloader.h  qgithubreleaseapi.cpp  qgithubreleaseapi.h  qgithubreleaseapi_p.cpp  qgithubreleaseapi_p.h
